dataset1235/2025-2/610742602/users/2447224811/executions/2563853024_208040576.log
== SUBMISSION (2025-09-02 20:33:00)
-- CODE: 
preco = float(input())
preco_final = preco - 15 / 100 * preco
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
1020.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
85.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
12.75
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
8.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
170.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
17.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:29:29)
-- CODE: 
preco = int(float(input())
preco_final = 15 / 100 * preco
print(preco_final)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
-- ERROR:
File "XXXX", line 1
    preco = int(float(input())
               ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
-- ERROR:
File "XXXX", line 1
    preco = int(float(input())
               ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
-- ERROR:
File "XXXX", line 1
    preco = int(float(input())
               ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
-- ERROR:
File "XXXX", line 1
    preco = int(float(input())
               ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
-- ERROR:
File "XXXX", line 1
    preco = int(float(input())
               ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
-- ERROR:
File "XXXX", line 1
    preco = int(float(input())
               ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:29:57)
-- CODE: 
preco = float(input())
preco_final = (15 / 100) * preco
print(preco_final)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1200.00
---- correct output:
1020.0
---- user output:
180.0
-- TEST CASE 2:
---- input:
100.0
---- correct output:
85.0
---- user output:
15.0
-- TEST CASE 3:
---- input:
15.0
---- correct output:
12.75
---- user output:
2.25
-- TEST CASE 4:
---- input:
10.0
---- correct output:
8.5
---- user output:
1.5
-- TEST CASE 5:
---- input:
200.0
---- correct output:
170.0
---- user output:
30.0
-- TEST CASE 6:
---- input:
20.0
---- correct output:
17.0
---- user output:
3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
